Fix selection not showing up on other editors in AST navigation mode

--- a/src/vs/editor/browser/viewParts/selections/selections.css
+++ b/src/vs/editor/browser/viewParts/selections/selections.css
@@ -11,11 +11,19 @@
 	position: absolute;
 }
 
-body:not(.astNavigationMode) .monaco-editor .focused .selected-text {
+body:not(.astNavigationMode) .editor-container .monaco-editor .focused .selected-text {
 	background-color: var(--vscode-editor-selectionBackground);
 }
 
-body:not(.astNavigationMode) .monaco-editor .selected-text {
+body:not(.astNavigationMode) .editor-container .monaco-editor .selected-text {
+	background-color: var(--vscode-editor-inactiveSelectionBackground);
+}
+
+.monaco-editor:not(.editor-container .monaco-editor) .focused .selected-text {
+	background-color: var(--vscode-editor-selectionBackground);
+}
+
+.monaco-editor:not(.editor-container .monaco-editor) .selected-text {
 	background-color: var(--vscode-editor-inactiveSelectionBackground);
 }
 
